WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77613
[GTK] Fix several gtkdoc-fixxref warnings
https://bugs.webkit.org/show_bug.cgi?id=77613
Summary
[GTK] Fix several gtkdoc-fixxref warnings
Carlos Garcia Campos
Reported
2012-02-02 00:45:26 PST
WebKit1 Running gtkdoc-fixxref html/WebKitWebNavigationAction.html:60: warning: no link for: 'WebKitWebNavigationReason' -> (<span class="type">WebKitWebNavigationReason</span>). html/webkitgtk-webkitwebview.html:811: warning: no link for: 'WebKitDOMDocument' -> (<span class="type">WebKitDOMDocument</span>). html/webkitgtk-webkitwebview.html:3764: warning: no link for: 'WebKitDOMCSSStyleDeclaration' -> (<span class="type">WebKitDOMCSSStyleDeclaration</span>). html/webkitgtk-webkitwebview.html:3765: warning: no link for: 'WebKitDOMRange' -> (<span class="type">WebKitDOMRange</span>). html/webkitgtk-webkitwebview.html:3811: warning: no link for: 'WebKitSelectionAffinity' -> (<span class="type">WebKitSelectionAffinity</span>). html/webkitgtk-webkitwebview.html:3878: warning: no link for: 'WebKitDOMNode' -> (<span class="type">WebKitDOMNode</span>). html/webkitgtk-webkitwebview.html:3880: warning: no link for: 'WebKitInsertAction' -> (<span class="type">WebKitInsertAction</span>). html/webkitgtk-webkitwebview.html:3926: warning: no link for: 'WebKitDOMHTMLElement' -> (<span class="type">WebKitDOMHTMLElement</span>). html/webkitgtk-webkitwebview.html:4159: warning: no link for: 'JSGlobalContextRef' -> (<span class="type">JSGlobalContextRef</span>). html/webkitgtk-webkitwebview.html:4165: warning: no link for: 'JSObjectRef' -> (<span class="type">JSObjectRef</span>). html/webkitgtk-WebKitSpellCheckerEnchant.html:45: warning: no link for: 'WebKitSpellCheckerEnchant' -> (<span class="type">WebKitSpellCheckerEnchant</span>). WebKitWebNavigationReason is in Private section in webkitgtk-sections.txt and it's not documented. WebKitSpellCheckerEnchant is private, it's not included in webkit.h, but it's in webkitgtk-sections.txt (without public symbols) and there's a section in webkitgtk-docs.sgml too. WebKit2 Running gtkdoc-fixxref html/WebKitPolicyDecision.html:100: warning: no link for: 'WebKitResponsePolicyDecision' -> (<span class="type">WebKitResponsePolicyDecision</span>). html/WebKitWindowProperties.html:94: warning: no link for: 'WebKitWebView--ready-to-show' -> (<span class="type">"ready-to-show"</span>). WebKitResponsePolicyDecision doesn't exist yet, it will be fixed automatically when patch for
bug #76789
lands. WebKitWebView::ready-to-show is referenced as a property instead of a signal in WebKitWindowProperties.cpp
Attachments
Patch
(8.58 KB, patch)
2012-02-02 00:56 PST
,
Carlos Garcia Campos
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2012-02-02 00:46:45 PST
Forgot to say that the other warnings in WebKit1 are because DOM bindings contain documentation but they are not included neither in webkitgtk-sections.txt nor webkitgtk-docs.sgml. And JavaScriptCore is not documented AFAIK
Carlos Garcia Campos
Comment 2
2012-02-02 00:56:30 PST
Created
attachment 125093
[details]
Patch
WebKit Review Bot
Comment 3
2012-02-02 00:58:57 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Xan Lopez
Comment 4
2012-02-02 01:40:24 PST
Comment on
attachment 125093
[details]
Patch The documentation tweaks make sense, but leaving for Martin the python changes.
Carlos Garcia Campos
Comment 5
2012-02-06 01:29:52 PST
Committed
r106788
: <
http://trac.webkit.org/changeset/106788
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug