[GTK] Fix several gtkdoc-fixxref warnings https://bugs.webkit.org/show_bug.cgi?id=77613

Reviewed by Martin Robinson.

Source/WebKit/gtk:

* docs/webkitgtk-docs.sgml: Remove webkitspellcheckerenchant
section.
* docs/webkitgtk-sections.txt: Remove webkitspellcheckerenchant
symbols and move WebKitWebNavigationReason from the private
section to the global section.
* webkit/webkitwebnavigationaction.h: Document
WebKitWebNavigationReason enum.

Source/WebKit2:

* UIProcess/API/gtk/WebKitWindowProperties.cpp: Fix a typo, a
colon was missing in WebKitWebView::ready-to-show.

Tools:

* gtk/generate-gtkdoc:
(get_webkit1_options): Add webkitspellcheckerenchant.* to the list
of ignored files, since it's private.
* gtk/gtkdoc.py:
(GTKDoc._ignored_files_basenames): Helper function that returns a
string with the list of ignored files basenames separated by a
spaces, as expected by several gtkdoc commands.
(GTKDoc._run_gtkdoc_scan): Use _ignored_files_basenames for
--ignore-headers option.
(GTKDoc._run_gtkdoc_mkdb): Use _ignored_files_basenames for
--ignore-files option.

Canonical link: https://commits.webkit.org/94722@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106788 268f45cc-cd09-0410-ab3c-d52691b4dbfc