Source/WebKit2/UIProcess/API/gtk/WebKitWindowProperties.cpp
@@ -38,7 +38,7 @@
  * scrollbar, statusbar, locationbar should be visible to the user,
  * and the request to show the #WebKitWebView fullscreen.
  *
- * The #WebKitWebView:ready-to-show signal handler is the proper place
+ * The #WebKitWebView::ready-to-show signal handler is the proper place
  * to apply the initial window properties. Then you can monitor the
  * #WebKitWindowProperties by connecting to ::notify signal.
  *
